@@ -1,3 +1,7 @@
+Wed Aug 05 05:40:17 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/fieldactions.py: Fix to work with FieldGroups again.
+
 Wed Aug 05 01:29:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/colour.py: Uncomment needed imports (which I'm not
